<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.mksystems.mks.dreammaster.SetNightTimeReminder"
tools:showIn="@layout/activity_set_night_time_reminder">

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delay_time"
        android:id="@+id/delay_time"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_vertical" />

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startTimeSpnr"
        android:entries="@array/night_time_start_choices" />

</LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_starting_time"
        android:id="@+id/starting_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/repeat_interval"
        android:id="@+id/textView3"
        android:layout_gravity="center_vertical" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Spinner
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:id="@+id/repeatIntervalSpnr"
        android:entries="@array/repeat_interval_choices" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/minutes"
        android:id="@+id/textView"
        android:layout_gravity="center_vertical" />
</LinearLayout>

<Space
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="25dp" />

<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enabled"
        android:id="@+id/enabledRadioBtn"
        android:checked="false"
        android:onClick="handleEnabledDisabledRadioBtns" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disabled"
        android:id="@+id/disabledRadioBtn"
        android:checked="true"
        android:onClick="handleEnabledDisabledRadioBtns" />

</RadioGroup>

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imageView"
    android:src="@drawable/sun_and_surf_885_x_623_distorted1" />


</LinearLayout>
